[GITHUB-4] Update to Latest Standards

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,8 @@
 ---
 
-ntp:
-  servers:
-    - 0.amazon.pool.ntp.org
-    - 1.amazon.pool.ntp.org
-    - 2.amazon.pool.ntp.org
-    - 3.amazon.pool.ntp.org
-  timezone: "UTC"
+sansible_ntp_servers:
+  - 0.amazon.pool.ntp.org
+  - 1.amazon.pool.ntp.org
+  - 2.amazon.pool.ntp.org
+  - 3.amazon.pool.ntp.org
+sansible_ntp_timezone: UTC
