--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-/meta/.galaxy_install_info
-.vagrant
-/tests/sansible.*
+## IDEs, editors, ...
+.\#*
+.DS_Store
+.idea
+.project
 *.bak
+*.iml
+*.sublime*
+*.swp
+/.settings
+\#*\#
+
+# Build and Tests Artefacts
+*.pyc
 *.retry
+.cache/
+.molecule/
+.venv_*
+/meta/.galaxy_install_info
