[GITHUB-6] Ensures service is enabled for SystemD
Also updates scaffolding bits (.travis.yml etc.).

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,9 +7,19 @@ platforms:
   - name: sansible_ntp-trusty
     image: ubuntu:trusty
   - name: sansible_ntp-xenial
-    image: ubuntu:xenial
+    image: solita/ubuntu-systemd:xenial
+    command: /sbin/init
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: sansible_ntp-bionic
-    image: ubuntu:bionic
+    image: solita/ubuntu-systemd:bionic
+    command: /sbin/init
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 provisioner:
   name: ansible
