--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,17 +1,23 @@
 ---
 
 galaxy_info:
-
+  author: sansible
   description: "Install and configures NTP."
   license: MIT
-  min_ansible_version: 2.2
+  min_ansible_version: 2.5
+  min_ansible_container_version: 2.5
   platforms:
     - name: Ubuntu
       versions:
         - trusty
         - xenial
         - bionic
-  categories:
-    - development
+  galaxy_tags:
+    - date
+    - ntp
+    - ntpd
+    - system
+    - time
+    - timezone
 
 dependencies: []
